--- a/rdaslides.dtx
+++ b/rdaslides.dtx
@@ -1411,7 +1411,7 @@ numbers here are totally fictitious when it comes to the actual files.
 % We begin with a horizontal rule.
 %
 %    \begin{macrocode}
-\RequirePackage{tabularx}
+\RequirePackage{tabularx,ifpdf}
 \newcommand{\finale}[1][\empty]{%
   \vbox{}
   \begin{small}
@@ -1438,10 +1438,21 @@ numbers here are totally fictitious when it comes to the actual files.
 %    \end{macrocode}
 %
 % We then add a row about the RDA. If a group logo has been defined we display
-% it.
+% it. Otherwise, we display the RDA logo (|RDA_Logotype_CMYK|) if the user has
+% it where \LaTeX\ can find it.
 %
 %    \begin{macrocode}
-    \ifdefvoid{\rdaGroupLogo}{}{\parbox[c]{\hsize}{\rdaGroupLogo}} &
+    \ifdefvoid{\rdaGroupLogo}{%
+      \ifpdf
+        \IfFileExists{RDA_Logotype_CMYK.pdf}{%
+          \includegraphics[width=\hsize]{RDA_Logotype_CMYK}%
+        }{}%
+      \else
+        \IfFileExists{RDA_Logotype_CMYK.eps}{%
+          \includegraphics[width=\hsize]{RDA_Logotype_CMYK}%
+        }{}%
+      \fi
+    }{\parbox[c]{\hsize}{\rdaGroupLogo}} &
 %    \end{macrocode}
 %
 % If group information has not been defined, we explain what the RDA is.
