Fix missing tikz dependency

--- a/rdaslides.dtx
+++ b/rdaslides.dtx
@@ -1218,6 +1218,7 @@ numbers here are totally fictitious when it comes to the actual files.
 % division by zero.
 %
 %    \begin{macrocode}
+\RequirePackage{tikz}
 \defbeamertemplate*{progress}{charge}{%
   \raisebox{2.7mm}[0pt][0pt]{%
     %\usebeamercolor{progress}%
