Allow source files to be unpacked with e-TeX

--- a/rdaslides.dtx
+++ b/rdaslides.dtx
@@ -1,8 +1,11 @@
 % \iffalse
 %<*internal>
-\RequirePackage{etoolbox}
 % \fi
-\providebool{ThisIsTheMainRun}
+\ifcsname ifThisIsTheMainRun\endcsname
+  \relax
+\else
+  \expandafter\newif\csname ifThisIsTheMainRun\endcsname
+\fi
 % \iffalse
 %</internal>
 %<*internal|class|theme|palette|mscwg|msdwg>
@@ -48,27 +51,6 @@ which can be used independently within beamer.
 Installation
 ------------
 
-### Automated way ###
-
-A makefile is provided which you can use with the Make utility:
-
-  * Running `make` generates the derived files
-
-      - README.md
-      - rdaslides.pdf
-      - rdaslides-slides.pdf
-      - rdaslides.cls
-      - rdacolors.sty
-      - beamerthemeRDA.sty
-      - rdamscwg.sty
-      - rdamsdwg.sty
-      - rdaslides.ins
-
-  * Running `make inst` installs the files (and images) in the user's
-    TeX tree.
-  * Running `make install` installs the files (and images) in the
-    local TeX tree.
-
 ### Pre-requisites ###
 
 The documentation uses fonts from the XCharter and sourcesanspro
@@ -76,31 +58,72 @@ packages, as well as sourcecodepro if XeLaTeX or LuaLaTeX is used,
 or zi4 (inconsolata) otherwise. To compile the documentation
 successfully, you will need the minted package installed and working.
 
+### Automated way ###
+
+A makefile is provided which you can use with the Make utility:
+
+  * Running `make rdaslides.cls` generates the derived files:
+
+      - README.md
+      - rdaslides.cls
+      - rdacolors.sty
+      - beamerthemeRDA.sty
+      - rdamscwg.sty
+      - rdamsdwg.sty
+      - rdaslides.ins
+
+  * Running `make` generates the above plus
+
+      - rdaslides.pdf
+      - rdaslides-slides.pdf
+
+  * Running `make inst` installs the files (and images) in the user's
+    TeX tree.  (To undo, run `make uninst`.)
+  * Running `make install` installs the files (and images) in the
+    local TeX tree. (To undo, run `make uninstall`.)
+
+The makefile is set up to use latexmk and lualatex by default.
+If this causes difficulty you could change it to use pdflatex directly
+instead.
+
 ### Manual way ###
 
 To install the class from scratch, follow these instructions. If you have
 downloaded the zip file from the [Releases] page on GitHub, you can skip the
-first two steps.
+first three steps.
 
- 1. Compile rdaslides.dtx just as you would a normal LaTeX file. You will
-    need to enable shell escape for minted to work properly. As well
-    as the usual PDF (or DVI) and auxiliary files, several others are
-    generated.
+ 1. Run `etex rdaslides.dtx` to generate the class and package files. (You can
+    safely skip this step if you are confident about step 2.)
 
- 2. Compile rdaslides.dtx a second time with `-jobname=rdaslides-slides`
+ 2. Compile rdaslides.dtx using your favourite version of LaTeX with shell
+    escape enabled (as required by minted for typesetting the listings). You
+    will also need to run it through `makeindex`. This will generate the main
+    documentation (DVI or PDF).
+
+ 3. Compile rdaslides.dtx a second time with `-jobname=rdaslides-slides`
     as a command line option to generate the sample slides. Again, you will
-    need to enable shell escape for minted to work properly.
+    need to enable shell escape so that minted can mark up the code listings.
 
- 3. Move the files to your TeX tree as follows:
+ 4. Move the files to your TeX tree as follows:
 
-      - `source/latex/rdaslides`: rdaslides.dtx, rdaslides.ins
-      - `tex/latex/rdaslides`: rdaslides.cls, rdacolors.sty,
-         beamerthemeRDA.sty, rdamscwg.sty, rdamsdwg.sty,
-         rda-bg-normal.jpeg rda-bg-title1.jpeg rda-bg-title2.jpeg
-      - `doc/latex/rdaslides`: rdaslides.pdf, rdaslides-slides.pdf,
-         README.md
+      - `source/latex/rdaslides`:
+        rdaslides.dtx,
+        rdaslides.ins
+      - `tex/latex/rdaslides`:
+        rdaslides.cls,
+        rdacolors.sty,
+        beamerthemeRDA.sty,
+        rdamscwg.sty,
+        rdamsdwg.sty,
+        rda-bg-normal.jpeg,
+        rda-bg-title1.jpeg,
+        rda-bg-title2.jpeg
+      - `doc/latex/rdaslides`:
+        rdaslides.pdf,
+        rdaslides-slides.pdf,
+        README.md
 
- 4. You may then have to update your installation's file name database
+ 5. You may then have to update your installation's file name database
     before TeX and friends can see the files.
 
 Licence
@@ -133,27 +156,29 @@ This work is "maintained" (as per LPPL maintenance status) by
 %<*internal>
 \fi
 \def\nameofplainTeX{plain}
-\ifx\fmtname\nameofplainTeX\else
+\ifx\fmtname\nameofplainTeX
+  \ThisIsTheMainRuntrue
+\else
   \expandafter\begingroup
+  \makeatletter
+  \protected@edef\su@SubString{-}%
+  \protected@edef\su@String{\jobname}%
+  \def\su@compare#1-#2\@nil{%
+    \def\su@param{#2}%
+    \ifx\su@param\@empty
+      \expandafter\@secondoftwo
+    \else
+      \expandafter\@firstoftwo
+    \fi
+  }%
+  \def\su@comp@compare#1#2{\su@compare#2\@nnil#1\@nil}%
+  \expandafter\expandafter\expandafter\su@comp@compare%
+  \expandafter\expandafter\expandafter{%
+  \expandafter\su@SubString\expandafter
+  }\expandafter{\su@String}%
+  {\ThisIsTheMainRunfalse}{\ThisIsTheMainRuntrue}
+  \makeatother
 \fi
-\makeatletter
-\protected@edef\su@SubString{-}%
-\protected@edef\su@String{\jobname}%
-\def\su@compare#1-#2\@nil{%
-  \def\su@param{#2}%
-  \ifx\su@param\@empty
-    \expandafter\@secondoftwo
-  \else
-    \expandafter\@firstoftwo
-  \fi
-}%
-\def\su@comp@compare#1#2{\su@compare#2\@nnil#1\@nil}%
-\expandafter\expandafter\expandafter\su@comp@compare%
-\expandafter\expandafter\expandafter{%
-\expandafter\su@SubString\expandafter
-}\expandafter{\su@String}%
-{\ThisIsTheMainRunfalse}{\ThisIsTheMainRuntrue}
-\makeatother
 \ifThisIsTheMainRun
 %</internal>
 %<*install>
@@ -218,14 +243,14 @@ Copyright (C) 2016 Alex Ball <a.j.ball@bath.ac.uk>
   \usepackage[scaled=0.96,sups]{XCharter}
   \usepackage[scaled=0.95,tabular]{sourcesanspro}
   \usepackage[varl,varqu]{zi4}
+  \makeatletter\def\mdseries@tt{m}\makeatother
 \else
   \usepackage{fontspec}
-  \setmainfont
+  \setmainfont{XCharter}%
     [Scale=0.96
     ,Ligatures=TeX
     ]%
-    {XCharter}
-  \setsansfont
+  \setsansfont{Source Sans Pro}%
     [Scale=MatchLowercase
     ,Ligatures=TeX
     ,StylisticSet=4
@@ -233,8 +258,7 @@ Copyright (C) 2016 Alex Ball <a.j.ball@bath.ac.uk>
     ,ItalicFont={Source Sans Pro Italic}
     ,BoldItalicFont={Source Sans Pro Bold Italic}
     ]%
-    {Source Sans Pro}
-  \setmonofont
+  \setmonofont{Source Code Pro}%
     [Scale=MatchLowercase
     ,RawFeature={extend=0.83}
     ,BoldFont={Source Code Pro Bold}
@@ -243,7 +267,6 @@ Copyright (C) 2016 Alex Ball <a.j.ball@bath.ac.uk>
     ,ItalicFeatures={FakeSlant=0.04}
     ,BoldItalicFeatures={FakeSlant=0.04}
     ]%
-    {Source Code Pro}
 \fi
 \usepackage{metalogo}
 \usepackage{multicol}
